mybril/src/snapshots/mybril__ssa__test__insert_phi@loop-orig.bril.snap
---
source: mybril/src/ssa.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/ssa/loop-orig.bril
---
@main {
.entry:
    i: int = const 1;
    jmp .loop;
.loop:
    max: int = const 10;
    cond: bool = lt i max;
    br cond .body .exit;
.body:
    i: int = add i i;
    jmp .loop;
.exit:
    print i;
}


26 -> 32

@main {
.entry:
  i: int = const 1;
  jmp .loop;
.loop:
  i = phi i i .entry .body;
  max: int = const 10;
  cond: bool = lt i max;
  br cond .body .exit;
.body:
  i: int = add i i;
  jmp .loop;
.exit:
  print i;
  ret;
}

